SystemUI: Allow overlaying max notification icons
* I believe there are devices in this world that can fit
  more than 4 notification icons.

Change-Id: I8f01b4e0385b35f4ed93aab2619839e5b40ee0c7

--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -510,4 +510,8 @@
 
     <!-- On debuggable builds, alert the user if SystemUI PSS goes over this number (in kb) -->
     <integer name="watch_heap_limit">256000</integer>
+
+    <!-- Max visible notification icons -->
+    <integer name="config_maxVisibleNotificationIcons">4</integer>
+    <integer name="config_maxVisibleNotificationIconsWhenDark">5</integer>
 </resources>
